--- a/index.html
+++ b/index.html
@@ -1,75 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> My Homepage </title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="col-12 text-center">
-                <h2>Watch Shop</h2>
-                <p>By Clifford Jay</p>
+    <title>My Homepage</title>
+    <head> 
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="css/index.css">
+    </head>
+    <body>
+        <div class="container">
+           <div class="row header text-center">
+            <div class="col-12">
+                <h2>MOTOR SHOP</h2>
+                <p>By Ronnel Nitoya</p>
                 <hr class="hr" />
             </div>
         </div>
         <div class="row">
             <!-- Product 1 -->
-            <div class="col-4 text-center">
-                <label id="product1">ROLEX</label>   
-                <img src="pic1.jfif" style="width:200px;height:250px;" class="img-thumbnail"/><br>
-                <label for="product1" id="price1">30000.00</label>
+            <div class="col-md-4 text-center product-card" id="p1">
+                <label id="product1">YAMAHA NMAX</label>   
+                <div class="img-container">
+                    <img src="nmax.png" class="img-thumbnail"/>
+                </div>
+                <label id="price1">150.000.00</label>
                 <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 2 -->
-            <div class="col-4 text-center">
-                <label id="product2">G-SHOCK</label>   
-                <img src="pic2.jpg" style="width:200px;height:250px;" class="img-thumbnail"/><br>
-                <label for="product2" id="price2">4000.00</label>
+            <div class="col-md-4 text-center product-card" id="p2">
+                <label id="product2">SUZUKI BURGMAN</label>   
+                <div class="img-container">
+                    <img src="burgman.png" class="img-thumbnail"/>
+                </div>
+                <label id="price2">70.000.00</label>
                 <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 3 -->
-            <div class="col-4 text-center">
-                <label id="product3">CASIO </label>   
-                <img src="pic3.jpg" style="width:200px;height:250px;" class="img-thumbnail"/><br>
-                <label for="product3" id="price3">15000.00</label>
+            <div class="col-md-4 text-center product-card" id="p3">
+                <label id="product3">YAMAHA AEROX</label>   
+                <div class="img-container">
+                    <img src="aerox.png" class="img-thumbnail"/>
+                </div>
+                <label id="price3">150.000.00</label>
                 <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
             </div>
         </div>
         <div class="row">
             <!-- Product 4 -->
-            <div class="col-4 text-center">
-                <label id="product4">SIEKO 5</label>   
-                <img src="pic4.jpg" style="width:200px;height:250px;" class="img-thumbnail"/><br>
-                <label for="product4" id="price4">25000.00</label>
+            <div class="col-md-4 text-center product-card" id="p4">
+                <label id="product4">YAMAHA MIO GEAR</label>   
+                <div class="img-container">
+                    <img src="mio.png" class="img-thumbnail"/>
+                </div>
+                <label id="price4">90.000.00</label>
                 <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 5 -->
-            <div class="col-4 text-center">
-                <label id="product5">TIMEX</label>   
-                <img src="pic5.webp" style="width:200px;height:250px;" class="img-thumbnail"/><br>
-                <label for="product5" id="price5">10000.00</label>
+            <div class="col-md-4 text-center product-card" id="p5">
+                <label id="product5">SUZUKI RAIDER150</label>   
+                <div class="img-container">
+                    <img src="raider.png" class="img-thumbnail"/>
+                </div>
+                <label id="price5">100.000.00</label>
                 <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 6 -->
-            <div class="col-4 text-center">
-                <label id="product6">GARMIN</label>   
-                <img src="pic6.jfif" style="width:200px;height:250px;" class="img-thumbnail"/><br>
-                <label for="product6" id="price6">35000.00</label>
+            <div class="col-md-4 text-center product-card" id="p6">
+                <label id="product6">SUZUKI SMASH FI</label>   
+                <div class="img-container">
+                    <img src="smash.png" class="img-thumbnail"/>
+                </div>
+                <label id="price6">90.000.00</label>
                 <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
+                </div>
+             </div>
+             <div class="row orders">
+                <div class="col-6">
+                  <br><br>
+                    <label for="carts"> Orders </label<br>
+                    <textarea class="form-control" rows="29" id="carts" cols="200" style="height: 400px;"> </textarea>
+                  </div> 
+                  <div class="col-6">
+                    <br><br>
+                    <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/>
+                    <br>
+                    <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/><br><br>
+                   
+                    <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
+                    <br>
+                    <button class="btn btn-primary" id="checkOut"> Check Out</button>
+                </div>
+                <hr><br><br><br><br>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12 text-center">
-                <label for="carts">Orders</label><br>
-                <textarea class="form-control" rows="10" id="carts" readonly></textarea><br>
-                <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/><br>
-                <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
-            </div>
-        </div>
-    </div>
-    <script src="app.js"></script>
-</body>
+        <script src="js/index.js"></script>
+    </body>
 </html>
