--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
            <div class="row header text-center">
             <div class="col-12">
                 <h2>MOTOR SHOP</h2>
-                <p>By Ronnel Nitoya</p>
+                <p>By Clifford Jay Fernandez</p>
                 <hr class="hr" />
             </div>
         </div>
         <div class="row">
             <!-- Product 1 -->
             <div class="col-md-4 text-center product-card" id="p1">
-                <label id="product1">YAMAHA NMAX</label>   
+                <label id="product1">ROLEX</label>   
                 <div class="img-container">
-                    <img src="nmax.png" class="img-thumbnail"/>
+                    <img src="rolex.png" class="img-thumbnail"/>
                 </div>
                 <label id="price1">150.000.00</label>
                 <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 2 -->
             <div class="col-md-4 text-center product-card" id="p2">
-                <label id="product2">SUZUKI BURGMAN</label>   
+                <label id="product2">G-SHOCK</label>   
                 <div class="img-container">
-                    <img src="burgman.png" class="img-thumbnail"/>
+                    <img src="gshock.png" class="img-thumbnail"/>
                 </div>
                 <label id="price2">70.000.00</label>
                 <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 3 -->
             <div class="col-md-4 text-center product-card" id="p3">
-                <label id="product3">YAMAHA AEROX</label>   
+                <label id="product3">CASIO</label>   
                 <div class="img-container">
-                    <img src="aerox.png" class="img-thumbnail"/>
+                    <img src="casio.png" class="img-thumbnail"/>
                 </div>
                 <label id="price3">150.000.00</label>
                 <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
@@ -47,27 +47,27 @@
         <div class="row">
             <!-- Product 4 -->
             <div class="col-md-4 text-center product-card" id="p4">
-                <label id="product4">YAMAHA MIO GEAR</label>   
+                <label id="product4">SEIKO 5</label>   
                 <div class="img-container">
-                    <img src="mio.png" class="img-thumbnail"/>
+                    <img src="seiko.png" class="img-thumbnail"/>
                 </div>
                 <label id="price4">90.000.00</label>
                 <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 5 -->
             <div class="col-md-4 text-center product-card" id="p5">
-                <label id="product5">SUZUKI RAIDER150</label>   
+                <label id="product5">TIMEX</label>   
                 <div class="img-container">
-                    <img src="raider.png" class="img-thumbnail"/>
+                    <img src="timex.png" class="img-thumbnail"/>
                 </div>
                 <label id="price5">100.000.00</label>
                 <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 6 -->
             <div class="col-md-4 text-center product-card" id="p6">
-                <label id="product6">SUZUKI SMASH FI</label>   
+                <label id="product6">GARMIN</label>   
                 <div class="img-container">
-                    <img src="smash.png" class="img-thumbnail"/>
+                    <img src="garmin.png" class="img-thumbnail"/>
                 </div>
                 <label id="price6">90.000.00</label>
                 <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
