--- a/index.html
+++ b/index.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Homepage</title>
-    <head> 
-
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="css/index.css">
-    </head>
-    <body>
-        <div class="container">
-           <div class="row header text-center">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/index.css">
+    <style>
+        .product-card {
+            padding: 20px;
+            background-color: #f8f9fa;
+            border-radius: 10px;
+            margin-bottom: 20px;
+            transition: transform 0.2s;
+        }
+        .product-card:hover {
+            transform: scale(1.05);
+            background-color: #e9ecef;
+        }
+        .product-card img {
+            width: 100%;
+            height: auto;
+        }
+        .product-details {
+            margin-top: 10px;
+        }
+        .orders {
+            margin-top: 30px;
+            padding: 20px;
+            background-color: #f8f9fa;
+            border-radius: 10px;
+        }
+        .hr {
+            border: 1px solid #000;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="row header text-center">
             <div class="col-12">
                 <h2>MOTOR SHOP</h2>
                 <p>By Clifford Jay Fernandez</p>
@@ -17,81 +48,78 @@
         </div>
         <div class="row">
             <!-- Product 1 -->
-            <div class="col-md-4 text-center product-card" id="p1">
-                <label id="product1">ROLEX</label>   
-                <div class="img-container">
-                    <img src="rolex.png" class="img-thumbnail"/>
+            <div class="col-md-4 text-center product-card">
+                <label id="product1">ROLEX</label>
+                <img src="rolex.png" class="img-thumbnail" alt="ROLEX"/>
+                <div class="product-details">
+                    <label id="price1">₱150,000.00</label>
+                    <input type="number" class="form-control mt-2" id="qty1" placeholder="Enter quantity"/>
                 </div>
-                <label id="price1">150.000.00</label>
-                <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 2 -->
-            <div class="col-md-4 text-center product-card" id="p2">
-                <label id="product2">G-SHOCK</label>   
-                <div class="img-container">
-                    <img src="gshock.png" class="img-thumbnail"/>
+            <div class="col-md-4 text-center product-card">
+                <label id="product2">G-SHOCK</label>
+                <img src="gshock.png" class="img-thumbnail" alt="G-SHOCK"/>
+                <div class="product-details">
+                    <label id="price2">₱70,000.00</label>
+                    <input type="number" class="form-control mt-2" id="qty2" placeholder="Enter quantity"/>
                 </div>
-                <label id="price2">70.000.00</label>
-                <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 3 -->
-            <div class="col-md-4 text-center product-card" id="p3">
-                <label id="product3">CASIO</label>   
-                <div class="img-container">
-                    <img src="casio.png" class="img-thumbnail"/>
+            <div class="col-md-4 text-center product-card">
+                <label id="product3">CASIO</label>
+                <img src="casio.png" class="img-thumbnail" alt="CASIO"/>
+                <div class="product-details">
+                    <label id="price3">₱150,000.00</label>
+                    <input type="number" class="form-control mt-2" id="qty3" placeholder="Enter quantity"/>
                 </div>
-                <label id="price3">150.000.00</label>
-                <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
             </div>
         </div>
         <div class="row">
             <!-- Product 4 -->
-            <div class="col-md-4 text-center product-card" id="p4">
-                <label id="product4">SEIKO 5</label>   
-                <div class="img-container">
-                    <img src="seiko.png" class="img-thumbnail"/>
+            <div class="col-md-4 text-center product-card">
+                <label id="product4">SEIKO 5</label>
+                <img src="seiko.png" class="img-thumbnail" alt="SEIKO 5"/>
+                <div class="product-details">
+                    <label id="price4">₱90,000.00</label>
+                    <input type="number" class="form-control mt-2" id="qty4" placeholder="Enter quantity"/>
                 </div>
-                <label id="price4">90.000.00</label>
-                <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 5 -->
-            <div class="col-md-4 text-center product-card" id="p5">
-                <label id="product5">TIMEX</label>   
-                <div class="img-container">
-                    <img src="timex.png" class="img-thumbnail"/>
+            <div class="col-md-4 text-center product-card">
+                <label id="product5">TIMEX</label>
+                <img src="timex.png" class="img-thumbnail" alt="TIMEX"/>
+                <div class="product-details">
+                    <label id="price5">₱100,000.00</label>
+                    <input type="number" class="form-control mt-2" id="qty5" placeholder="Enter quantity"/>
                 </div>
-                <label id="price5">100.000.00</label>
-                <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 6 -->
-            <div class="col-md-4 text-center product-card" id="p6">
-                <label id="product6">GARMIN</label>   
-                <div class="img-container">
-                    <img src="garmin.png" class="img-thumbnail"/>
+            <div class="col-md-4 text-center product-card">
+                <label id="product6">GARMIN</label>
+                <img src="garmin.png" class="img-thumbnail" alt="GARMIN"/>
+                <div class="product-details">
+                    <label id="price6">₱90,000.00</label>
+                    <input type="number" class="form-control mt-2" id="qty6" placeholder="Enter quantity"/>
                 </div>
-                <label id="price6">90.000.00</label>
-                <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
-                </div>
-             </div>
-             <div class="row orders">
-                <div class="col-6">
-                  <br><br>
-                    <label for="carts"> Orders </label<br>
-                    <textarea class="form-control" rows="29" id="carts" cols="200" style="height: 400px;"> </textarea>
-                  </div> 
-                  <div class="col-6">
-                    <br><br>
-                    <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/>
-                    <br>
-                    <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/><br><br>
-                   
-                    <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
-                    <br>
-                    <button class="btn btn-primary" id="checkOut"> Check Out</button>
-                </div>
-                <hr><br><br><br><br>
             </div>
         </div>
-        <script src="js/index.js"></script>
-    </body>
+        <div class="row orders">
+            <div class="col-6">
+                <label for="carts">Orders</label>
+                <textarea class="form-control" rows="10" id="carts" style="height: 400px;" readonly></textarea>
+            </div>
+            <div class="col-6">
+                <label for="total">Total</label>
+                <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/>
+                <label for="cash" class="mt-2">Cash Tendered</label>
+                <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/>
+                <label for="change" class="mt-2">Change</label>
+                <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
+                <button class="btn btn-primary mt-2" id="checkOut">Check Out</button>
+            </div>
+        </div>
+    </div>
+    <script src="js/index.js"></script>
+</body>
 </html>
