--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             background-color: #f8f9fa;
             border-radius: 10px;
             margin-bottom: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         .product-card img {
             width: 100%;
@@ -20,6 +23,16 @@
         }
         .product-details {
             margin-top: 10px;
+            width: 100%;
+            text-align: center;
+        }
+        .product-details label, .product-details input {
+            display: block;
+            width: 100%;
+            margin-bottom: 10px;
+        }
+        .product-details label {
+            font-weight: bold;
         }
         .orders {
             margin-top: 30px;
@@ -48,7 +61,7 @@
                 <img src="rolex.png" class="img-thumbnail" alt="ROLEX"/>
                 <div class="product-details">
                     <label id="price1">₱150,000.00</label>
-                    <input type="number" class="form-control mt-2" id="qty1" placeholder="Enter quantity"/>
+                    <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/>
                 </div>
             </div>
             <!-- Product 2 -->
@@ -57,7 +70,7 @@
                 <img src="gshock.png" class="img-thumbnail" alt="G-SHOCK"/>
                 <div class="product-details">
                     <label id="price2">₱70,000.00</label>
-                    <input type="number" class="form-control mt-2" id="qty2" placeholder="Enter quantity"/>
+                    <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/>
                 </div>
             </div>
             <!-- Product 3 -->
@@ -66,7 +79,7 @@
                 <img src="casio.png" class="img-thumbnail" alt="CASIO"/>
                 <div class="product-details">
                     <label id="price3">₱150,000.00</label>
-                    <input type="number" class="form-control mt-2" id="qty3" placeholder="Enter quantity"/>
+                    <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/>
                 </div>
             </div>
         </div>
@@ -77,7 +90,7 @@
                 <img src="seiko.png" class="img-thumbnail" alt="SEIKO 5"/>
                 <div class="product-details">
                     <label id="price4">₱90,000.00</label>
-                    <input type="number" class="form-control mt-2" id="qty4" placeholder="Enter quantity"/>
+                    <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/>
                 </div>
             </div>
             <!-- Product 5 -->
@@ -86,7 +99,7 @@
                 <img src="timex.png" class="img-thumbnail" alt="TIMEX"/>
                 <div class="product-details">
                     <label id="price5">₱100,000.00</label>
-                    <input type="number" class="form-control mt-2" id="qty5" placeholder="Enter quantity"/>
+                    <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/>
                 </div>
             </div>
             <!-- Product 6 -->
@@ -95,7 +108,7 @@
                 <img src="garmin.png" class="img-thumbnail" alt="GARMIN"/>
                 <div class="product-details">
                     <label id="price6">₱90,000.00</label>
-                    <input type="number" class="form-control mt-2" id="qty6" placeholder="Enter quantity"/>
+                    <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/>
                 </div>
             </div>
         </div>
@@ -118,4 +131,3 @@
     <script src="js/index.js"></script>
 </body>
 </html>
-
