--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            height: 100%;
         }
         .product-card img {
             width: 100%;
@@ -25,14 +26,13 @@
             margin-top: 10px;
             width: 100%;
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         .product-details label, .product-details input {
-            display: block;
             width: 100%;
             margin-bottom: 10px;
-        }
-        .product-details label {
-            font-weight: bold;
         }
         .orders {
             margin-top: 30px;
@@ -56,59 +56,71 @@
         </div>
         <div class="row">
             <!-- Product 1 -->
-            <div class="col-md-4 text-center product-card">
-                <label id="product1">ROLEX</label>
-                <img src="rolex.png" class="img-thumbnail" alt="ROLEX"/>
-                <div class="product-details">
-                    <label id="price1">₱150,000.00</label>
-                    <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/>
+            <div class="col-md-4 text-center d-flex justify-content-center">
+                <div class="product-card">
+                    <label id="product1">ROLEX</label>
+                    <img src="rolex.png" class="img-thumbnail" alt="ROLEX"/>
+                    <div class="product-details">
+                        <label id="price1">₱150,000.00</label>
+                        <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/>
+                    </div>
                 </div>
             </div>
             <!-- Product 2 -->
-            <div class="col-md-4 text-center product-card">
-                <label id="product2">G-SHOCK</label>
-                <img src="gshock.png" class="img-thumbnail" alt="G-SHOCK"/>
-                <div class="product-details">
-                    <label id="price2">₱70,000.00</label>
-                    <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/>
+            <div class="col-md-4 text-center d-flex justify-content-center">
+                <div class="product-card">
+                    <label id="product2">G-SHOCK</label>
+                    <img src="gshock.png" class="img-thumbnail" alt="G-SHOCK"/>
+                    <div class="product-details">
+                        <label id="price2">₱70,000.00</label>
+                        <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/>
+                    </div>
                 </div>
             </div>
             <!-- Product 3 -->
-            <div class="col-md-4 text-center product-card">
-                <label id="product3">CASIO</label>
-                <img src="casio.png" class="img-thumbnail" alt="CASIO"/>
-                <div class="product-details">
-                    <label id="price3">₱150,000.00</label>
-                    <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/>
+            <div class="col-md-4 text-center d-flex justify-content-center">
+                <div class="product-card">
+                    <label id="product3">CASIO</label>
+                    <img src="casio.png" class="img-thumbnail" alt="CASIO"/>
+                    <div class="product-details">
+                        <label id="price3">₱150,000.00</label>
+                        <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="row">
             <!-- Product 4 -->
-            <div class="col-md-4 text-center product-card">
-                <label id="product4">SEIKO 5</label>
-                <img src="seiko.png" class="img-thumbnail" alt="SEIKO 5"/>
-                <div class="product-details">
-                    <label id="price4">₱90,000.00</label>
-                    <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/>
+            <div class="col-md-4 text-center d-flex justify-content-center">
+                <div class="product-card">
+                    <label id="product4">SEIKO 5</label>
+                    <img src="seiko.png" class="img-thumbnail" alt="SEIKO 5"/>
+                    <div class="product-details">
+                        <label id="price4">₱90,000.00</label>
+                        <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/>
+                    </div>
                 </div>
             </div>
             <!-- Product 5 -->
-            <div class="col-md-4 text-center product-card">
-                <label id="product5">TIMEX</label>
-                <img src="timex.png" class="img-thumbnail" alt="TIMEX"/>
-                <div class="product-details">
-                    <label id="price5">₱100,000.00</label>
-                    <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/>
+            <div class="col-md-4 text-center d-flex justify-content-center">
+                <div class="product-card">
+                    <label id="product5">TIMEX</label>
+                    <img src="timex.png" class="img-thumbnail" alt="TIMEX"/>
+                    <div class="product-details">
+                        <label id="price5">₱100,000.00</label>
+                        <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/>
+                    </div>
                 </div>
             </div>
             <!-- Product 6 -->
-            <div class="col-md-4 text-center product-card">
-                <label id="product6">GARMIN</label>
-                <img src="garmin.png" class="img-thumbnail" alt="GARMIN"/>
-                <div class="product-details">
-                    <label id="price6">₱90,000.00</label>
-                    <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/>
+            <div class="col-md-4 text-center d-flex justify-content-center">
+                <div class="product-card">
+                    <label id="product6">GARMIN</label>
+                    <img src="garmin.png" class="img-thumbnail" alt="GARMIN"/>
+                    <div class="product-details">
+                        <label id="price6">₱90,000.00</label>
+                        <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/>
+                    </div>
                 </div>
             </div>
         </div>
