--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="col-md-4 text-center product-card" id="p2">
                 <label id="product2">G-SHOCK</label>   
                 <div class="img-container">
-                    <img src="gshockpng" class="img-thumbnail"/>
+                    <img src="gshock.png" class="img-thumbnail"/>
                 </div>
                 <label id="price2">70.000.00</label>
                 <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
