--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
                 </div>
             </div>
             <div class="row orders">
-            <div class="col-6 text-center">
+            <div class="col-md-12">
                 <label for="carts">Orders</label><br>
-                <textarea class="form-control" rows="15" id="carts" cols="200" readonly></textarea><br>
+                <textarea class="form-control" rows="10" id="carts" cols="200" readonly style="width:100%;font-size:12px;"></textarea>
                 <input type="text" class="form-control border-0" id="total" readonly placeholder="Total">
-                <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/><br>
+                <input type="number" class="form-control" id="cash" placeholder="Cash Tendered">
                 <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
             </div>
         </div>
