--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
             background-color: #ffeb3b; /* Yellow background for text */
             display: inline-block;
             padding: 0 20px;
-            animation: slideIn 5s linear infinite;
+            animation: fadeIn 5s infinite alternate;
         }
-        @keyframes slideIn {
+        @keyframes fadeIn {
             0% {
-                transform: translateX(100%);
+                opacity: 0;
             }
             100% {
-                transform: translateX(-100%);
+                opacity: 1;
             }
         }
         .product {
@@ -50,7 +50,7 @@
             transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
         }
         .product:hover {
-            transform: rotateY(180deg);
+            transform: scale(1.05);
             background-color: #e0f2f1;
         }
         .product img {
@@ -89,7 +89,7 @@
             <hr class="hr">
         </div>
         <div class="row">
-            <div class="col-6 col-md-4 d-flex">
+            <div class="col-4 col-md-4 d-flex">
                 <div class="product flex-fill">
                     <label id="product1">ROLEX</label>   
                     <img src="rolex.png" class="img-thumbnail">
@@ -97,7 +97,7 @@
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity">
                 </div>
             </div>
-            <div class="col-6 col-md-4 d-flex">
+            <div class="col-4 col-md-4 d-flex">
                 <div class="product flex-fill">
                     <label id="product2">G-SHOCK</label>   
                     <img src="gshock.png" class="img-thumbnail">
@@ -105,7 +105,7 @@
                     <input type="number" class="form-control" id="qty2" placeholder="Enter quantity">
                 </div>
             </div>
-            <div class="col-6 col-md-4 d-flex">
+            <div class="col-4 col-md-4 d-flex">
                 <div class="product flex-fill">
                     <label id="product3">CASIO</label>   
                     <img src="casio.png" class="img-thumbnail">
@@ -113,7 +113,7 @@
                     <input type="number" class="form-control" id="qty3" placeholder="Enter quantity">
                 </div>
             </div>
-            <div class="col-6 col-md-4 d-flex">
+            <div class="col-4 col-md-4 d-flex">
                 <div class="product flex-fill">
                     <label id="product4">SEIKO 5</label>   
                     <img src="seiko.png" class="img-thumbnail">
@@ -121,7 +121,7 @@
                     <input type="number" class="form-control" id="qty4" placeholder="Enter quantity">
                 </div>
             </div>
-            <div class="col-6 col-md-4 d-flex">
+            <div class="col-4 col-md-4 d-flex">
                 <div class="product flex-fill">
                     <label id="product5">TIMEX</label>   
                     <img src="timex.png" class="img-thumbnail">
@@ -129,7 +129,7 @@
                     <input type="number" class="form-control" id="qty5" placeholder="Enter quantity">
                 </div>
             </div>
-            <div class="col-6 col-md-4 d-flex">
+            <div class="col-4 col-md-4 d-flex">
                 <div class="product flex-fill">
                     <label id="product6">GARMIN</label>   
                     <img src="garmin.png" class="img-thumbnail">
@@ -141,7 +141,7 @@
         <div class="row orders">
             <div class="col-md-12">
                 <label for="carts">Orders</label><br>
-                <textarea class="form-control" rows="10" id="carts" cols="200" readonly style="width:100%;font-size:12px;"></textarea>
+                <textarea class="form-control" rows="15" id="carts" cols="200" readonly style="width:100%;font-size:12px;"></textarea>
                 <input type="text" class="form-control border-0" id="total" readonly placeholder="Total">
                 <input type="number" class="form-control" id="cash" placeholder="Cash Tendered">
                 <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
@@ -151,3 +151,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
