--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         .header {
             text-align: center;
-            background-color: #00796b;
+            background-color: #87ceeb; /* Changed to sky blue */
             color: white;
             padding: 20px 0;
             position: relative;
@@ -80,8 +80,8 @@
             }
         }
         .col-custom {
-            flex: 0 0 30%;
-            max-width: 30%;
+            flex: 0 0 20%; /* Adjusted to make columns narrower */
+            max-width: 20%; /* Adjusted to make columns narrower */
         }
         @media (max-width: 767px) {
             .col-custom {
@@ -161,3 +161,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
