--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         .header {
             text-align: center;
             background-color: #00796b;
-            color: white;
+            color: black; /* Change text color to black */
             padding: 20px 0;
             position: relative;
             overflow: hidden;
@@ -41,7 +41,7 @@
             border: 1px solid #bdbdbd;
             border-radius: 5px;
             padding: 10px;
-            margin-bottom: 20px;
+            margin-bottom: 10px; /* Reduced margin-bottom to make products closer */
             text-align: center;
             display: flex;
             flex-direction: column;
@@ -162,4 +162,5 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
