--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         .header h2 {
             margin: 0;
             font-size: 2.5em;
-            background-color: skyblue;
+            background-color: black; /* Changed animation background color to black */
             display: inline-block;
             padding: 0 20px;
             animation: fadeIn 5s infinite alternate;
@@ -82,7 +82,7 @@
         .col-custom {
             flex: 0 0 30%;
             max-width: 30%;
-            padding: 5px;
+            padding: 10px; /* Increased padding to make columns look more substantial */
         }
         @media (max-width: 767px) {
             .col-custom {
