--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h2>STAR GADGETS</h2>
-            <p>TECH FOR YOU</p>
+            <h2>WATCH SHOP</h2>
+            <p>BY CLIFFORD JAY FERNANDEZ</p>
             <hr class="hr">
         </div>
         <div class="row justify-content-center">
