--- a/index.html
+++ b/index.html
@@ -104,11 +104,9 @@
                 <div class="product flex-fill">
                     <label id="product1">ROLEX</label>   
                     <img src="rolex.png" class="img-thumbnail">
-                    <div>
-                        <ul class="d-flex">
-                        <p>Php</p>
-                        <label id="price1">15000.00</label><br>
-                        </ul>
+                    <ul class="d-flex">
+                    <p>Php</p>
+                    <label id="price1">15000.00</label>
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity">
                 </div>
             </div>
