--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="product flex-fill">
                     <label id="product1">ROLEX</label>   
                     <img src="rolex.png" class="img-thumbnail">
-                    <label id="price1">Php 15000.00</label>
+                    <label id="price1">15000.00</label>
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity">
                 </div>
             </div>
@@ -112,7 +112,7 @@
                 <div class="product flex-fill">
                     <label id="product2">G-SHOCK</label>   
                     <img src="gshock.png" class="img-thumbnail">
-                    <label id="price2">Php 45000.00</label>
+                    <label id="price2">45000.00</label>
                     <input type="number" class="form-control" id="qty2" placeholder="Enter quantity">
                 </div>
             </div>
@@ -120,7 +120,7 @@
                 <div class="product flex-fill">
                     <label id="product3">CASIO</label>   
                     <img src="casio.png" class="img-thumbnail">
-                    <label id="price3">Php 20000.00</label>
+                    <label id="price3">20000.00</label>
                     <input type="number" class="form-control" id="qty3" placeholder="Enter quantity">
                 </div>
             </div>
@@ -128,7 +128,7 @@
                 <div class="product flex-fill">
                     <label id="product4">SEIKO 5</label>   
                     <img src="seiko.png" class="img-thumbnail">
-                    <label id="price4">Php 7000.00</label>
+                    <label id="price4">7000.00</label>
                     <input type="number" class="form-control" id="qty4" placeholder="Enter quantity">
                 </div>
             </div>
@@ -136,7 +136,7 @@
                 <div class="product flex-fill">
                     <label id="product5">TIMEX</label>   
                     <img src="timex.png" class="img-thumbnail">
-                    <label id="price5">Php 30000.00</label>
+                    <label id="price5">30000.00</label>
                     <input type="number" class="form-control" id="qty5" placeholder="Enter quantity">
                 </div>
             </div>
@@ -144,7 +144,7 @@
                 <div class="product flex-fill">
                     <label id="product6">GARMIN</label>   
                     <img src="garmin.png" class="img-thumbnail">
-                    <label id="price6">Php 5000.00</label>
+                    <label id="price6">5000.00</label>
                     <input type="number" class="form-control" id="qty6" placeholder="Enter quantity">
                 </div>
             </div>
