--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="product flex-fill">
                     <label id="product1">ROLEX</label>   
                     <img src="rolex.png" class="img-thumbnail">
-                    <label id="price1">15000.00</label>
+                    <label id="price1">Php 15000.00</label>
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity">
                 </div>
             </div>
